fixed phone overflow issue

--- a/To do list.css
+++ b/To do list.css
@@ -6,6 +6,10 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 h1 {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 80px;
